ci(workflow): 添加部署工作流的写入权限和.nojekyll文件
添加contents: write权限以允许工作流提交更改
在docs目录中创建.nojekyll文件以防止Jekyll处理

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout 代码
         uses: actions/checkout@v4
@@ -31,6 +34,7 @@ jobs:
         run: |
           rm -rf docs
           cp -r dist docs
+          touch docs/.nojekyll
 
       - name: 提交到仓库
         run: |
