--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@google/genai": "^1.29.1",
     "gifuct-js": "^2.1.2",
     "mammoth": "^1.11.0",
+    "pdfjs-dist": "^5.4.449",
+    "pptxgenjs": "^4.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
